--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -6,6 +6,7 @@
 
   --background-color: var(--lightgrey);
   --header-background-color: var(--white);
+  --form-input-background-color: var(--white);
 }
 
 body {
